[gd_scene load_steps=4 format=2]

[ext_resource path="res://UserInterface/fonts/poppins_description_text.tres" type="DynamicFont" id=1]
[ext_resource path="res://UserInterface/assets/portrait_default.png" type="Texture" id=2]
[ext_resource path="res://UserInterface/PlayerHud/prefabs/PlayerInfoBox.gd" type="Script" id=3]

[node name="PlayerInfoBox" type="MarginContainer"]
margin_right = 268.0
margin_bottom = 612.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 244.0
margin_bottom = 588.0
rect_min_size = Vector2( 220, 0 )
mouse_filter = 2

[node name="InfoBox" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 220.0
margin_bottom = 80.0
rect_min_size = Vector2( 220, 80 )

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/InfoBox"]
margin_right = 220.0
margin_bottom = 80.0
rect_min_size = Vector2( 160, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InfoBox"]
margin_right = 220.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PortraitTexture" type="TextureRect" parent="VBoxContainer/InfoBox/HBoxContainer"]
unique_name_in_owner = true
margin_right = 70.0
margin_bottom = 80.0
rect_min_size = Vector2( 70, 80 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/InfoBox/HBoxContainer"]
margin_left = 74.0
margin_right = 220.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/InfoBox/HBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 138.0
margin_bottom = 72.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/InfoBox/HBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 138.0
margin_bottom = 72.0
mouse_filter = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/InfoBox/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 130.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HealthValue" type="Label" parent="VBoxContainer/InfoBox/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_right = 36.0
margin_bottom = 30.0
rect_min_size = Vector2( 36, 28 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "0/0"
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/InfoBox/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 40.0
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Health"
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/InfoBox/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 130.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StressValue" type="Label" parent="VBoxContainer/InfoBox/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_right = 36.0
margin_bottom = 30.0
rect_min_size = Vector2( 36, 28 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = " 0/0 "
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/InfoBox/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 40.0
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Stress"
valign = 1
